--- a/MBSL-week2.Rmd
+++ b/MBSL-week2.Rmd
@@ -48,10 +48,23 @@ EMalgo <- function(X,K,n.iter=50,plot=FALSE,...){
     }
   } 
   cat('\n')
+  plot(X,col=max.col(P)+1); points(mu,col=c(2,3),pch=19,cex=3)
   
- list(P = P, prop = prop, mu = mu, Sigma = Sigma)
+  # Calculation of BIC
+  loglik = 0
+  for (k in 1:K) {
+    Xk = X - matrix(1,n,1) %*% mu[k,]
+    loglik = loglik + sum(log(prop[k]) - p/2*log(pi) 
+                 - 1/2 * log(det(Sigma[k,,]))
+                 - 1/2 * Xk %*% solve(Sigma[k,,]) %*% t(Xk))
+  }
+  bic = loglik - 1/2 * (K-1 + K*p*(p+1)) * log(n)
+  list(P = P, prop = prop, mu = mu, Sigma = Sigma, 
+       bic = bic, loglik = loglik)
 }
 ```
+
+Let's start with an easy situation:
 
 ```{r}
 X = rbind(rmvnorm(100,c(0,0),0.1*diag(2)),
@@ -66,20 +79,49 @@ plot(X)
 points(out$mu,col=c(2,3),pch=19,cex=3)
 ```
 
+Here, we can see the effect of each iteration on the inference of the means and the estimation of cluster memberships:
+
 ```{r}
 out = EMalgo(X,2,plot = TRUE,n.iter = 10)
 ```
 
+Let's now consider a more difficult problem:
+
+```{r}
+X = rbind(rmvnorm(100,c(0,0),0.8*diag(2)),
+          rmvnorm(200,c(-2,2),0.8*diag(2)))
+plot(X)
+```
+
+```{r}
+out = EMalgo(X,2)
+```
+
+```{r}
+out$mu
+```
+
+Let's now consider the problem of choosing $K$:
+
+```{r}
+X = rbind(rmvnorm(100,c(0,0),0.4*diag(2)),
+          rmvnorm(200,c(-2,2),0.4*diag(2)))
+plot(X)
+```
 
 
+```{r}
+par(mfrow = c(2,3))
+for (k in 1:6) EMalgo(X,k,n.iter = 50)
+```
 
+Let's try now to use BIC to select the best K:
 
-
-
-
-
-
-
+```{r}
+bic = rep(NA,6)
+for (k in 1:6) bic[k] = EMalgo(X,k)$bic
+plot(bic,type='b')
+```
 
 
 
